force-app/main/default/objects/LLC_BI__Period_Consolidation__c/fields/LLC_BI__Selected__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Selected__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The system automatically populates this required boolean field to determine which entities display in the Financial Consolidation. When the value is true, the entity displays.</description>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>