force-app/main/default/objects/LLC_BI__Period_Consolidation__c/fields/LLC_BI__Source_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Period__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>This field is required. The system automatically populates this required lookup field to reference the source period in the consolidation bundle.</description>
    <inlineHelpText>This field is required. The system automatically populates this required lookup field to reference the source period in the consolidation bundle.</inlineHelpText>
    <label>Source Period</label>
    <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
    <relationshipLabel>Source Period Consolidations</relationshipLabel>
    <relationshipName>Source_Period_Consolidations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>