force-app/main/default/objects/LLC_BI__Period_Consolidation__c/fields/LLC_BI__Supplemental_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Supplemental_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. The system automatically populates this optional lookup field to reference the supplemental period in the consolidation bundle.</description>
    <inlineHelpText>This field is optional. The system automatically populates this optional lookup field to reference the supplemental period in the consolidation bundle.</inlineHelpText>
    <label>Supplemental Period</label>
    <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
    <relationshipLabel>Supplemental Period Consolidations</relationshipLabel>
    <relationshipName>Supplemental_Period_Consolidations</relationshipName>
    <type>Lookup</type>
</CustomField>